# Raytracer

./: .gitignore  CMakeLists.txt  README.md  render.sh  setup.sh  setup_and_anim.sh
framework/: box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  fileload.cpp  hitpoint.hpp  light.hpp  material.cpp  material.hpp  pixel.cpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sdf_parser.cpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  window.hpp
source/: CMakeLists.txt  anim.sh  animation.sdf  basic_anim.sh  load_scene.cpp  render_test.cpp  scene_1.sdf  scene_2.sdf  scene_load_test.cpp  scene_test.sdf  scene_test_2.sdf  scene_test_3.sdf  test_2.cpp  tests.cpp
